criada a api local

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 222,
    "metadata": {
     "hidden": true
    },
@@ -4367,7 +4367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 258,
    "metadata": {
     "hidden": true
    },
@@ -4399,7 +4399,7 @@
        " 'sales']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4444,57 +4444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['store',\n",
-       " 'promo',\n",
-       " 'store_type',\n",
-       " 'assortment',\n",
-       " 'competition_distance',\n",
-       " 'competition_open_since_month',\n",
-       " 'competition_open_since_year',\n",
-       " 'promo2',\n",
-       " 'promo2_since_week',\n",
-       " 'promo2_since_year',\n",
-       " 'competition_time_month',\n",
-       " 'promo_time_week',\n",
-       " 'day_of_week_sin',\n",
-       " 'day_of_week_cos',\n",
-       " 'month_sin',\n",
-       " 'month_cos',\n",
-       " 'day_sin',\n",
-       " 'day_cos',\n",
-       " 'week_of_year_sin',\n",
-       " 'week_of_year_cos',\n",
-       " 'date',\n",
-       " 'sales']"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 259,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
    "source": [
-    "x_train = X_train[selected].drop(columns=['date'])\n",
-    "x_test = X_test[selected].drop(columns=['date'])\n",
+    "x_train = X_train[selected].drop(columns=['date', 'sales'])\n",
+    "x_test = X_test[selected].drop(columns=['date', 'sales'])\n",
     "x_training = X_train[selected]"
    ]
   },
@@ -4626,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {
     "hidden": true
    },
@@ -4638,7 +4595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {
     "hidden": true
    },
@@ -4687,7 +4644,7 @@
        "0  Linear Regression  1860.269238  0.285708  2690.376341"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4705,6 +4662,32 @@
     "# performance\n",
     "lr_result = ml_error('Linear Regression', np.expm1(y_test), np.expm1(yhat_lr))\n",
     "lr_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['store', 'promo', 'store_type', 'assortment', 'competition_distance',\n",
+       "       'competition_open_since_month', 'competition_open_since_year', 'promo2',\n",
+       "       'promo2_since_week', 'promo2_since_year', 'competition_time_month',\n",
+       "       'promo_time_week', 'day_of_week_sin', 'day_of_week_cos', 'month_sin',\n",
+       "       'month_cos', 'day_sin', 'day_cos', 'week_of_year_sin',\n",
+       "       'week_of_year_cos', 'sales'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.columns"
    ]
   },
   {
@@ -5554,58 +5537,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model Name</th>\n",
-       "      <th>MAE</th>\n",
-       "      <th>MAPE</th>\n",
-       "      <th>RMSE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>XGBoost Regressor</td>\n",
-       "      <td>48.397398</td>\n",
-       "      <td>0.006748</td>\n",
-       "      <td>89.263883</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Model Name        MAE      MAPE       RMSE\n",
-       "0  XGBoost Regressor  48.397398  0.006748  89.263883"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_tuned = {\n",
     "    'n_estimators': 1500,\n",
@@ -5619,8 +5553,8 @@
     "xgb = XGBRegressor(objective='reg:squarederror',\n",
     "                    n_estimators=param_tuned['n_estimators'],\n",
     "                    eta=param_tuned['eta'],\n",
-    "                    max_depth=hp['max_depth'],\n",
-    "                    subsample=hp['subsample'],\n",
+    "                    max_depth=param_tuned['max_depth'],\n",
+    "                    subsample=param_tuned['subsample'],\n",
     "                    colsample_bytree=param_tuned['colsample_bytree'],\n",
     "                    min_child_weight=param_tuned['min_child_wight'])\n",
     "                    \n",
@@ -5634,16 +5568,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00016414359307474443"
+       "-0.025660269365928388"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6167,7 +6101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6188,14 +6122,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Rossman(object):\n",
+    "import pickle\n",
+    "import inflection\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import datetime\n",
+    "import locale\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Rossmann(object):\n",
     "    def __init__(self):\n",
-    "        self.competition_distance_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/competition_distance_rescaler.pkl', 'rb'))\n",
-    "        self.competition_time_month_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/competition_time_month_rescaler.pkl', 'rb'))\n",
-    "        self.promo_time_week_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/promo_time_week_rescaler.pkl', 'rb'))\n",
-    "        self.year_rescaler = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/year_rescaler.pkl', 'rb'))\n",
-    "        self.store_type_label_encoder = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/store_type_label_encoder.pkl', 'rb'))\n",
-    "        self.assortment_ordinal_encoder = pickle.load(open('/home/biazotogabriel/repos/courses/ds_em_producao/parameter/assortment_ordinal_encoder.pkl', 'rb'))\n",
+    "        self.home_path = '/home/biazotogabriel/repos/courses/ds_em_producao/'\n",
+    "        self.competition_distance_rescaler = pickle.load(open(self.home_path+'parameter/competition_distance_rescaler.pkl', 'rb'))\n",
+    "        self.competition_time_month_rescaler = pickle.load(open(self.home_path+'parameter/competition_time_month_rescaler.pkl', 'rb'))\n",
+    "        self.promo_time_week_rescaler = pickle.load(open(self.home_path+'parameter/promo_time_week_rescaler.pkl', 'rb'))\n",
+    "        self.year_rescaler = pickle.load(open(self.home_path+'parameter/year_rescaler.pkl', 'rb'))\n",
+    "        self.store_type_label_encoder = pickle.load(open(self.home_path+'parameter/store_type_label_encoder.pkl', 'rb'))\n",
+    "        self.assortment_ordinal_encoder = pickle.load(open(self.home_path+'parameter/assortment_ordinal_encoder.pkl', 'rb'))\n",
     "\n",
     "    def data_cleaning(self, df1):\n",
     "        #rename\n",
@@ -6243,64 +6189,71 @@
     "                                                                'b': 'easter',\n",
     "                                                                'c': 'christmas',\n",
     "                                                                '0': 'regular'}.get(x, x))\n",
-    "        df2 = df2[(df2['open'] != 0) & (df2['sales'] > 0)]\n",
-    "        cols_drop = ['customers', 'open', 'promo_interval']\n",
+    "        df2 = df2[df2['open'] != 0]\n",
+    "        cols_drop = ['open', 'promo_interval']\n",
     "        df2 = df2.drop(cols_drop, axis=1)\n",
     "\n",
     "        return df2\n",
     "\n",
-    "        def data_preparation(self, df5):\n",
-    "            #fit_transform ??\n",
-    "            df5['competition_distance'] = self.competition_distance_rescaler.transform(df5[['competition_distance']].values)\n",
-    "            df5['competition_time_month'] = self.competition_time_month_rescaler.transform(df5[['competition_time_month']].values)\n",
-    "            df5['promo_time_week'] = self.promo_time_week_rescaler.transform(df5[['promo_time_week']].values)\n",
-    "            df5['year'] = self.year_rescaler.transform(df5[['year']].values)\n",
+    "    def data_preparation(self, df5):\n",
+    "        #fit_transform ??\n",
+    "        df5['competition_distance'] = self.competition_distance_rescaler.transform(df5[['competition_distance']].values)\n",
+    "        df5['competition_time_month'] = self.competition_time_month_rescaler.transform(df5[['competition_time_month']].values)\n",
+    "        df5['promo_time_week'] = self.promo_time_week_rescaler.transform(df5[['promo_time_week']].values)\n",
+    "        df5['year'] = self.year_rescaler.transform(df5[['year']].values)\n",
     "\n",
-    "            df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
-    "            df5['store_type'] = self.store_type_label_encoder.transform(df5['store_type'])\n",
-    "            df5['assortment'] = self.assortment_ordinal_encoder.transform(df5[['assortment']].values)\n",
-    "          \n",
-    "            df5['sales'] = np.log1p(df5['sales'])\n",
-    "            \n",
-    "            df5['day_of_week_sin'] = df5['day_of_week'].apply(lambda x: np.sin(x * (2. *  np.pi / 7)))\n",
-    "            df5['day_of_week_cos'] = df5['day_of_week'].apply(lambda x: np.cos(x * (2. *  np.pi / 7)))\n",
+    "        df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
+    "        df5['store_type'] = self.store_type_label_encoder.transform(df5['store_type'])\n",
+    "        df5['assortment'] = self.assortment_ordinal_encoder.transform(df5[['assortment']].values)\n",
+    "        \n",
+    "        #df5['sales'] = np.log1p(df5['sales'])\n",
+    "        \n",
+    "        df5['day_of_week_sin'] = df5['day_of_week'].apply(lambda x: np.sin(x * (2. *  np.pi / 7)))\n",
+    "        df5['day_of_week_cos'] = df5['day_of_week'].apply(lambda x: np.cos(x * (2. *  np.pi / 7)))\n",
     "\n",
-    "            df5['month_sin'] = df5['month'].apply(lambda x: np.sin(x * (2. *  np.pi / 12)))\n",
-    "            df5['month_cos'] = df5['month'].apply(lambda x: np.cos(x * (2. *  np.pi / 12)))\n",
+    "        df5['month_sin'] = df5['month'].apply(lambda x: np.sin(x * (2. *  np.pi / 12)))\n",
+    "        df5['month_cos'] = df5['month'].apply(lambda x: np.cos(x * (2. *  np.pi / 12)))\n",
     "\n",
-    "            df5['day_sin'] = df5['day'].apply(lambda x: np.sin(x * (2. *  np.pi / 30)))\n",
-    "            df5['day_cos'] = df5['day'].apply(lambda x: np.cos(x * (2. *  np.pi / 30)))\n",
+    "        df5['day_sin'] = df5['day'].apply(lambda x: np.sin(x * (2. *  np.pi / 30)))\n",
+    "        df5['day_cos'] = df5['day'].apply(lambda x: np.cos(x * (2. *  np.pi / 30)))\n",
     "\n",
-    "            df5['week_of_year_sin'] = df5['week_of_year'].apply(lambda x: np.sin(x * (2. *  np.pi / 52)))\n",
-    "            df5['week_of_year_cos'] = df5['week_of_year'].apply(lambda x: np.cos(x * (2. *  np.pi / 52)))\n",
+    "        df5['week_of_year_sin'] = df5['week_of_year'].apply(lambda x: np.sin(x * (2. *  np.pi / 52)))\n",
+    "        df5['week_of_year_cos'] = df5['week_of_year'].apply(lambda x: np.cos(x * (2. *  np.pi / 52)))\n",
     "\n",
-    "            #Final cols selected according with boruta\n",
-    "            selected = [\n",
-    "                'store', \n",
-    "                'promo', \n",
-    "                'store_type', \n",
-    "                'assortment', \n",
-    "                'competition_distance',\n",
-    "                'competition_open_since_month', \n",
-    "                'competition_open_since_year', \n",
-    "                'promo2',\n",
-    "                'promo2_since_week', \n",
-    "                'promo2_since_year', \n",
-    "                'competition_time_month',\n",
-    "                'promo_time_week', \n",
-    "                'day_of_week_sin', \n",
-    "                'day_of_week_cos', \n",
-    "                'month_sin',\n",
-    "                'month_cos',\n",
-    "                'day_sin', \n",
-    "                'day_cos',\n",
-    "                'week_of_year_sin', \n",
-    "                'week_of_year_cos'] \n",
+    "        #Final cols selected according with boruta\n",
+    "        selected = [\n",
+    "            'store', \n",
+    "            'promo', \n",
+    "            'store_type', \n",
+    "            'assortment', \n",
+    "            'competition_distance',\n",
+    "            'competition_open_since_month', \n",
+    "            'competition_open_since_year', \n",
+    "            'promo2',\n",
+    "            'promo2_since_week', \n",
+    "            'promo2_since_year', \n",
+    "            'competition_time_month',\n",
+    "            'promo_time_week', \n",
+    "            'day_of_week_sin', \n",
+    "            'day_of_week_cos', \n",
+    "            'month_sin',\n",
+    "            'month_cos',\n",
+    "            'day_sin', \n",
+    "            'day_cos',\n",
+    "            'week_of_year_sin', \n",
+    "            'week_of_year_cos'] \n",
     "\n",
-    "            feature_add = ['date', 'sales']\n",
-    "            selected.extend(feature_add)\n",
+    "        feature_add = ['date']#, 'sales'\n",
+    "        #selected.extend(feature_add)\n",
     "\n",
-    "            return df5[selected]"
+    "        return df5[selected]\n",
+    "\n",
+    "    def get_prediction(self, model, original_data, test_data):\n",
+    "        pred = model.predict(test_data)\n",
+    "\n",
+    "        original_data['prediction'] = np.expm1(pred)\n",
+    "\n",
+    "        return original_data.to_json(orient='records', date_format='iso')"
    ]
   },
   {
@@ -6354,7 +6307,7 @@
     "    test_json = request.get_json()\n",
     "\n",
     "    if test_json:\n",
-    "        if isinstance(test_json):\n",
+    "        if isinstance(test_json, dict):\n",
     "            test_raw = pd.DataFrame(test_json, index=[0])\n",
     "        else:\n",
     "            test_raw = pd.DataFrame(test_json, columns=test_json[0].keys())\n",
@@ -6383,9 +6336,96 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 231,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df10 = pd.read_csv('datasets/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df10.merge(df_stores_raw, how='left', on='Store')\n",
+    "df_test\n",
+    "\n",
+    "#choose store for prediction\n",
+    "df_test = df_test[df_test['Store'].isin([22])]\n",
+    "\n",
+    "df_test = df_test[df_test['Open'] != 0]\n",
+    "df_test = df_test[~df_test['Open'].isnull()]\n",
+    "df_test = df_test.drop('Id', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = json.dumps(df_test.to_dict(orient='records'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status Code 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "#API Call\n",
+    "url = 'http://0.0.0.0:5000/rossmann/predict'\n",
+    "header = {'Content-type': 'application/json'}\n",
+    "data = data\n",
+    "\n",
+    "r = requests.post(url, data=data, headers=header)\n",
+    "print('Status Code {}'.format(r.status_code))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d1 = pd.DataFrame(r.json(), columns=r.json()[0].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2 = d1[['store', 'prediction']].groupby('store').sum().reset_index()\n",
+    "\n",
+    "for i in range(len(d2)):\n",
+    "    print('Store Number {} will sell R$ {:,.2f} in the next 6 week'.format(\n",
+    "        d2.loc[i, 'store'],\n",
+    "        d2.loc[i, 'prediction']\n",
+    "    ))"
+   ]
   }
  ],
  "metadata": {
